# Apiary

./: .gitignore  BEGIN_EXPERIMENT_LOOP.md  README.md  SCOPE.md  autoresearch.toml  program.md  project.toml  projects.py  pyproject.toml
apiary/: __init__.py  __main__.py  agent.py  contracts.py  leaderboard.py
research_community/: __init__.py  __main__.py  agent.py  contracts.py  leaderboard.py  projects.py  registry.py  runners.py
