[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-research-community"
version = "0.1.0"
description = "Phase 1 scaffold for autonomous experiment agents."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["research_community"]
