[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apiary"
version = "0.1.0"
description = "Multi-agent orchestration scaffold for autonomous research experiments."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["apiary"]
